# poly-spintergrate

./: CMakeLists.txt  README.md  test-norm-bad.txt  test-norm.txt
mathematica/: Collatz.m  GenCCode.nb  PentSolution.m  PolyGeometry.m  PolySpintergrate.nb
src/: CMakeLists.txt  boundary-fns.h  boundary-fns.mc  compute-traj-54.c  compute-traj.c  config-fns.c  config-fns.h  dynamics-eom-54.h  dynamics-eom-54.mc  dynamics-eom-all.h  dynamics-eom-all.mc  dynamics-test.c  dynamics-test.mc  dynamics.c  dynamics.h  eom-fns.c  eom-fns.h  find-boundary.c  find-boundary.h  find-config.c  find-config.h  find-config.mc  fixed-point-iter.c  fixed-point-iter.h  gauss-collocation.c  gauss-collocation.h  ham-all.h  ham-all.mc  ham-fns.c  ham-fns.h  test-config.c  test-eom.c
